--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <img src="images/one-rbg.png" alt="#">
+  <div class="ball-background">
+<img class="ball-one" src="images/one-rbg.png" alt="ball">
+<img class="ball-two" src="images/two-rbg.png" alt="ball">
+<img class="ball-three" src="images/three-rbg.png" alt="ball">
+<img class="ball-four" src="images/two-rbg.png" alt="ball">
+<img class="ball-five" src="images/one-rbg.png" alt="ball">
+  </div>
+  
 </body>
 </html>
