--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 <img class="ball-three" src="images/three-rbg.png" alt="ball">
 <img class="ball-four" src="images/two-rbg.png" alt="ball">
 <img class="ball-five" src="images/one-rbg.png" alt="ball">
+<img class="cloud-one" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-two" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-three" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-four" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-five" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-six" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-seven" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-eight" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-nine" src="images/cloud-rbg.png" alt="cloud">
+<img class="cloud-ten" src="images/cloud-rbg.png" alt="cloud">
   </div>
   
 </body>
