--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Felicitări!</title>
+  <title>&#128521 &#129303 &#128568</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,6 +24,6 @@
 <img class="cloud-nine" src="images/cloud-rbg.png" alt="cloud">
 <img class="cloud-ten" src="images/cloud-rbg.png" alt="cloud">
   </div>
-  
+  <script src="js/main.js"></script>
 </body>
 </html>
