--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 <img class="ball-three" src="images/three-rbg.png" alt="ball">
 <img class="ball-four" src="images/two-rbg.png" alt="ball">
 <img class="ball-five" src="images/one-rbg.png" alt="ball">
-<img class="cloud-one" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-two" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-three" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-four" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-five" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-six" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-seven" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-eight" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-nine" src="images/cloud-rbg.png" alt="cloud">
-<img class="cloud-ten" src="images/cloud-rbg.png" alt="cloud">
+<img class="ball-six" src="images/three-rbg.png" alt="ball">
+<img class="ball-seven" src="images/two-rbg.png" alt="ball">
+<img class="ball-eight" src="images/one-rbg.png" alt="ball">
+<img class="ball-nine" src="images/three-rbg.png" alt="ball">
+<img class="ball-ten" src="images/two-rbg.png" alt="ball">
+<img class="ball-eleven" src="images/one-rbg.png" alt="ball">
+<img class="ball-twelve" src="images/three-rbg.png" alt="ball">
+<img class="ball-thirteen" src="images/two-rbg.png" alt="ball">
+<img class="ball-fourteen" src="images/one-rbg.png" alt="ball">
+<img class="ball-fifteen" src="images/three-rbg.png" alt="ball">
   </div>
   <script src="js/main.js"></script>
 </body>
