--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,8 @@
 <img class="ball-thirteen" src="images/two-rbg.png" alt="ball">
 <img class="ball-fourteen" src="images/one-rbg.png" alt="ball">
 <img class="ball-fifteen" src="images/three-rbg.png" alt="ball">
+<img class="ball-sixteen" src="images/three-rbg.png" alt="ball">
   </div>
-  <script src="js/main.js"></script>
+  <script src="js/main.js"></script> 
 </body>
 </html>
