--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <img class="ball-fifteen" src="images/three-rbg.png" alt="ball">
 <img class="ball-sixteen" src="images/three-rbg.png" alt="ball">
   </div>
-  <script src="js/main.js"></script> 
+  <audio id="audio" src="audio/pesenka_krokodila_geny.mp3"></audio>
+   <script src="js/main.js"></script> 
 </body>
 </html>
