--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
 <img class="ball-fifteen" src="images/three-rbg.png" alt="ball">
 <img class="ball-sixteen" src="images/three-rbg.png" alt="ball">
   </div>
+  <div class="text">
+    <p class="text-content">GEO, </br>LA MULȚI ANI!</p>
+  </div>
+  <div class="words">
+    <p class="words-content">inspirație</p>
+    <p class="words-content">oportunități</p>
+    <p class="words-content">armonie</p>
+    <p class="words-content">prosperitate</p>
+    <p class="words-content">curaj</p>
+    <p class="words-content">energie</p>
+    <p class="words-content">satisfacție</p>
+    <p class="words-content">perseverență</p>
+  </div>
   <audio id="audio" src="audio/pesenka_krokodila_geny.mp3"></audio>
    <script src="js/main.js"></script> 
 </body>
